unix cookie file fix, loader color
when running deployeye on linux and loading a cookie from a file, HttpConnection threw exceptions due to the old readFile method returning newlines
changed loader color to deploye eye green

--- a/WebContent/frontend/res/css/custom.css
+++ b/WebContent/frontend/res/css/custom.css
@@ -119,7 +119,7 @@ text-transform-variation: text;
   width: 9px;
   height: 9px;
   border-radius: 50%;
-  background: #f29800;
+  background: #00f54c;
   margin: -3px 0 0 -3px;
 }
 .lds-roller div:nth-child(1) {
